--- a/css/global.css
+++ b/css/global.css
@@ -32,6 +32,7 @@ body {
 }
 
 body {
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
@@ -138,7 +139,11 @@ img {
 
 /* Main game area */
 .game-main {
-    padding: 1.6rem 0 2.2rem;
+    padding: 2.4rem 0 3rem;
+    flex: 1;
+    width: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .game-area-wrapper {
